app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
// /**
//  * Copyright © Magento, Inc. All rights reserved.
//  * See COPYING.txt for license details.
//  */

//
//  Components
//  _____________________________________________

@import 'fields/_control-collapsible.less';
@import 'fields/_control-table.less';
@import 'fields/_field-tooltips.less';
@import 'fields/_field-reset.less';

//
//  Extends
//  _____________________________________________

.abs-field-size-x-small {
    width: @field-size__xs;
}

.abs-field-size-small {
    width: @field-size__s;
}

.abs-field-size-medium {
    width: @field-size__m;
}

.abs-field-size-large {
    width: @field-size__l;
}

.abs-field-sizes {
    &.admin__field-x-small {
        > .admin__field-control {
            &:extend(.abs-field-size-x-small all);
        }
    }

    &.admin__field-small {
        > .admin__field-control {
            &:extend(.abs-field-size-small all);
        }
    }

    &.admin__field-medium {
        > .admin__field-control {
            &:extend(.abs-field-size-medium all);
        }
    }

    &.admin__field-large {
        > .admin__field-control {
            &:extend(.abs-field-size-large all);
        }
    }
}

.abs-field-no-label {
    /**
     * @codingStandardsIgnoreStart
     */
    #mix-grid .return_length(@field-label-grid__column, @field-grid__columns, '+');
    //@codingStandardsIgnoreEnd
    margin-left: @_length;
}

//
//  Form Fields
//  _____________________________________________

//
//  Fieldset
//  ---------------------------------------------

.admin__fieldset {
    border: 0;
    margin: 0;
    min-width: 0;
    padding: 0;

    //  Filedset section
    .fieldset-wrapper {
        &.admin__fieldset-section {
            > .fieldset-wrapper-title {
                padding-left: @indent__s;

                strong {
                    font-size: @collapsible-title__font-size;
                    font-weight: @font-weight__semibold;
                }
            }

            .admin__fieldset-wrapper-content {
                > .admin__fieldset {
                    padding-top: @indent__s;
                }
            }

            &:last-child {
                .admin__fieldset-wrapper-content {
                    > .admin__fieldset {
                        padding-bottom: 0;
                    }
                }
            }
        }
    }

    > .admin__field {
        border: 0;
        margin: 0 0 3rem 0;
        padding: 0;
        #mix-grid .row();

        &.admin__field-wide {
            &:extend(.abs-field-rows all);
        }

        > .admin__field-control {
            #mix-grid .column(@field-control-grid__column, @field-grid__columns);
        }

        > .admin__field-label {
            #mix-grid .column(@field-label-grid__column, @field-grid__columns);
        }

        &:extend(.abs-field-sizes all);

        &.admin__field-no-label {
            > .admin__field-label {
                display: none;
            }

            > .admin__field-control {
                &:extend(.abs-field-no-label all);
            }
        }

        //  Field with empty table and no thead
        + .admin__field {
            &._empty {
                &._no-header {
                    margin-top: -@indent__l;
                }
            }
        }
    }

    > .product-options {
        > .admin__field {
            border: 0;
            margin: 0 0 3rem 0;
            padding: 0;
            #mix-grid .row();
    
            &.admin__field-wide {
                &:extend(.abs-field-rows all);
            }
    
            > .admin__field-control {
                #mix-grid .column(@field-control-grid__column, @field-grid__columns);
                float: none;
                display: inline-block;
                margin-bottom: 3rem;
                &:last-child {
                    margin-bottom: 0;
                }
            }
    
            > .admin__field-label {
                #mix-grid .column(@field-label-grid__column, @field-grid__columns);
                float: none;
                display: inline-block;  
                vertical-align: top;              
            }
      
            &:extend(.abs-field-sizes all);
    
            &.admin__field-no-label {
                > .admin__field-label {
                    display: none;
                }
    
                > .admin__field-control {
                    &:extend(.abs-field-no-label all);
                }
            }
    
            //  Field with empty table and no thead
            + .admin__field {
                &._empty {
                    &._no-header {
                        margin-top: -@indent__l;
                    }
                }
            }
        }
    }
}

.admin__fieldset-product-websites {
    position: relative;
    z-index: @z-index-3;
}

.admin__fieldset-note {
    margin-bottom: @indent__base;
}

.admin__form-field {
    border: 0;
    margin: 0;
    padding: 0;
}

.admin__form-field-control,
.admin__field-control {
    .admin__control-text,
    .admin__control-textarea {
        width: 100%;
        &.disabled {
            background-color: #e9e9e9;
            border-color: #adadad;
            color: #303030;
            cursor: not-allowed;
            opacity: .5;
        }
    }
}

.admin__field-no-label {
    &:extend(.abs-field-no-label all);
}

.admin__field-row {
    &:extend(.abs-field-rows all);
}
/* ... */

